--- a/custom/css/style.css
+++ b/custom/css/style.css
@@ -2,6 +2,16 @@
 
 }
 
+a.navbar-text {
+  display: inline-block;
+  padding: 0 10px;
+  text-decoration: none;
+}
+
+a.brand, a.navbar-text:hover {
+  font-weight: bold;
+}
+
 .panel.panel-default {
   border-radius: 12px;
 }
