--- a/custom/css/style.css
+++ b/custom/css/style.css
@@ -3,6 +3,10 @@
 	/*border: 1px solid red !important;*/
 }
 
+.navbar {
+  background-color: ;
+}
+
 /* CARD */
 .link,
 .avatar,
@@ -11,7 +15,7 @@
 }
 
 .panel {
-	border-radius: 12px;
+	border-radius: 2px;
 	margin-top: 3em;
 	overlay: hidden;
 	min-width: 300px;
@@ -19,8 +23,8 @@
 
 .panel-heading {
 	padding: 0px !important;
-	border-top-left-radius: 12px;
-	border-top-right-radius: 12px;
+	border-top-left-radius: 2px;
+	border-top-right-radius: 2px;
 	color: #fff !important;
 	overflow: hidden;
 	width: 100%;
@@ -44,8 +48,8 @@
 }
 
 .panel-heading .img {
-	border-top-left-radius: 12px;
-	border-top-right-radius: 12px;
+	border-top-left-radius: 2px;
+	border-top-right-radius: 2px;
 	opacity: .4;
 	width: 100%;
 }
@@ -134,8 +138,8 @@
 }
 
 .panel-body {
-	border-bottom-left-radius: 12px;
-	border-bottom-right-radius: 12px;
+	border-bottom-left-radius: 2px;
+	border-bottom-right-radius: 2px;
 	color: #fff;
 	padding: 16px 32px;
 	position: relative;
@@ -162,9 +166,7 @@
 
 .info-bar li {
 	display: inline-block;
-}
-
-.info-bar li {
+  margin: 0 4px;
 	text-shadow: 0 1px 0 rgba(255, 255, 255, .15), 0 -1px 0 rgba(0, 0, 0, .25);
 }
 
