--- a/custom/css/style.css
+++ b/custom/css/style.css
@@ -17,10 +17,8 @@ header {
 	height: 56px;
 	color: rgba(255,255,255,.7);
 	background-color: #263238;
-}
-
-header .container {
-
+	padding: 0px;
+	margin: 0px;
 }
 
 header ul {
@@ -48,7 +46,7 @@ header ul li img{
 	display: none;
 }
 
-.links.btn {
+.btn {
 	margin-left: 4px;
 	margin-right: 4px;
 	border-top-left-radius: 25px;
@@ -76,6 +74,14 @@ header ul li img{
 		display: block;
 		padding: 6px;
 	}
+}
+
+.cover {
+	width: 100%;
+	height: 280px;
+	background: #ccc;
+	padding: 0px;
+	margin: 0px 0px 56px 0px;
 }
 
 .form-group {
