--- a/custom/css/style.css
+++ b/custom/css/style.css
@@ -3,19 +3,22 @@
 	/*border: 1px solid red !important;*/
 }
 
-a:focus {
-	outline: none;
+a:focus, input:focus, button:focus {
+	outline: none !important;
+}
+
+a:active, input:active, button:active {
+	outline: none !important;
 }
 
 body {
-	background-color: ;
 	min-width: 320px;
 }
 
 header {
 	width: 100%;
 	height: 56px;
-	color: rgba(255,255,255,.7);
+	color: rgba(255,255,255, 8);
 	background-color: #263238;
 	padding: 0px;
 	margin: 0px;
@@ -31,7 +34,7 @@ header ul li.links {
 
 header ul li.links a{
 	text-decoration: none;
-	color: rgba(255,255,255,.7);
+	color: rgba(255,255,255,.8);
 }
 
 header ul li img{
@@ -56,7 +59,7 @@ header ul li img{
 	background-color: rgba(255,255,255,.1);
 }
 
-.links.btn:hover {
+.links.btn:hover, .links.btn:active{
 	box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
 }
 
