--- a/custom/css/style.css
+++ b/custom/css/style.css
@@ -3,20 +3,158 @@
 	/*border: 1px solid red !important;*/
 }
 
+*:focus,
+*:active {
+  outline: none !important;
+}
+
 a {
 	text-decoration: none !important;
 }
 
-a:focus, input:focus, button:focus {
-	outline: none !important;
+label {
+	color: blue;
+	font-weight: 300;
 }
 
-a:active, input:active, button:active {
-	outline: none !important;
+input:not([type=submit]){
+	border-top: none !important;
+	border-left: none !important;
+	border-right: none !important;
+	border-bottom: 1px solid #cfcfcf;
+	border-radius: 0 !important;
+	box-shadow: inset 0 0 0 transparent !important;
+	background-color: transparent !important;
+	margin: 0 auto;
+	padding: 0;
 }
+
+input::after {
+	content: '';
+	border-bottom: 1px solid #000;
+}
+
+
 
 body {
-	min-width: 360px;
+	min-width: 340px;
+	background-color: #fcfcfc;
+}
+
+body,
+p,
+small,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: 'Roboto Condensed', 'Helvetica', 'Arial', sans-serif;
+  font-weight: 300;
+}
+
+h5,
+h6 {
+  font-weight: 400;
+}
+
+a .material-icons,
+a:hover .material-icons,
+a:focus .material-icons {
+  vertical-align: middle;
+}
+
+.btn {
+  border: none;
+	border-top-left-radius: 25px;
+	border-bottom-left-radius: 25px;
+	border-top-right-radius: 25px;
+	border-bottom-right-radius: 25px;
+  position: relative;
+  padding: 8px 32px;
+  margin: 10px 0px;
+  font-size: 14px;
+  font-weight: 500;
+  text-transform: uppercase;
+  letter-spacing: 0;
+  will-change: box-shadow, transform;
+  cursor: pointer;
+  text-decoration: none;
+  background: transparent;
+}
+
+.btn:not(.btn-raised) {
+  -webkit-box-shadow: none;
+          box-shadow: none;
+  background-color: rgba(255,255,255,.1);
+}
+
+.btn:not(.btn-raised).btn-primary {
+  color: rgba(255,255,255,.8);
+}
+
+.btn:not(.btn-raised).btn-primary:hover,
+.btn:not(.btn-raised).btn-primary:focus {
+  background-color: rgba(255,255,255,.1);
+}
+
+.btn.btn-raised,
+.btn.btn-fab {
+  background-color: rgba(0,0,0,.2);
+  color: rgba(0,0,0, 0.8);
+}
+
+.btn.btn-raised.btn-primary,
+.btn.btn-fab.btn-primary {
+  background-color: #827717;
+  color: rgba(255,255,255, 0.8);
+}
+
+.btn:focus:active:hover {
+  -webkit-box-shadow: 0 0 8px rgba(0, 0, 0, 0.18), 0 8px 16px rgba(0, 0, 0, 0.36);
+          box-shadow: 0 0 8px rgba(0, 0, 0, 0.18), 0 8px 16px rgba(0, 0, 0, 0.36);
+}
+
+.btn.btn-raised {
+  -webkit-box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
+          box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
+}
+
+.btn-group-raised:active:hover {
+  -webkit-box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.14), 0 1px 10px 0 rgba(0, 0, 0, 0.12), 0 2px 4px -1px rgba(0, 0, 0, 0.2);
+          box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.14), 0 1px 10px 0 rgba(0, 0, 0, 0.12), 0 2px 4px -1px rgba(0, 0, 0, 0.2);
+}
+
+.btn.btn-fab {
+  border-radius: 50%;
+  font-size: 24px;
+  height: 56px;
+  margin: auto;
+  min-width: 56px;
+  width: 56px;
+  padding: 0;
+  overflow: hidden;
+  -webkit-box-shadow: 0 1px 1.5px 0 rgba(0, 0, 0, 0.12), 0 1px 1px 0 rgba(0, 0, 0, 0.24);
+          box-shadow: 0 1px 1.5px 0 rgba(0, 0, 0, 0.12), 0 1px 1px 0 rgba(0, 0, 0, 0.24);
+  position: relative;
+  line-height: normal;
+}
+
+.btn.btn-fab i.material-icons {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-12px, -12px);
+      -ms-transform: translate(-12px, -12px);
+       -o-transform: translate(-12px, -12px);
+          transform: translate(-12px, -12px);
+  line-height: 24px;
+  width: 24px;
+}
+
+.btn i.material-icons {
+  vertical-align: middle;
 }
 
 .message-container {
@@ -78,28 +216,6 @@ header ul li img.logo{
 	display: none;
 }
 
-.btn {
-	margin-left: 4px;
-	margin-right: 4px;
-	border-top-left-radius: 25px;
-	border-bottom-left-radius: 25px;
-	border-top-right-radius: 25px;
-	border-bottom-right-radius: 25px;
-	background-color: rgba(255,255,255,.1);
-}
-
-.btn-primary {
-	color: rgba(255,255,255,.8) !important;
-}
-
-.links .btn:hover, .links .btn:active{
-	box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
-}
-
-.btn-primary.btn-raised:hover {
-	background-color: #9e9d24; !important;
-}
-
 @media screen and (max-width: 768px) {
 	.links .btn {
 		border-radius: 100%;
@@ -153,10 +269,6 @@ a.logo-form img {
 	box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
 }
 
-.container-form .btn-primary{
-	margin: 24px 0px 8px 0px !important;
-}
-
 a.text-primary {
 	text-transform: uppercase;
 	font-weight: 700;
@@ -166,25 +278,24 @@ a.text-primary:hover {
 	color: #9e9d24; !important;
 }
 
-.form-group {
-	margin: 0px !important;
-	padding: 0px !important;
-}
-
-.form-group .form-control {
-	margin: 0px !important;
-}
-
-.form-group .control-label {
-	padding: 0px !important;
-	margin: 0px !important;
-}
-
 /* CARD */
 .link,
 .avatar,
 .info-block {
 	cursor: pointer;
+}
+
+.panel {
+  border: 0;
+  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+}
+
+.panel:hover {
+
+}
+
+[class*="panel-"] > .panel-heading {
+  border: 0;
 }
 
 .panel.panel-default {
