--- a/custom/css/style.css
+++ b/custom/css/style.css
@@ -15,6 +15,7 @@ a {
 label {
 	color: blue;
 	font-weight: 300;
+	margin-top: -16px;
 }
 
 input:not([type=submit]){
@@ -28,13 +29,6 @@ input:not([type=submit]){
 	margin: 0 auto;
 	padding: 0;
 }
-
-input::after {
-	content: '';
-	border-bottom: 1px solid #000;
-}
-
-
 
 body {
 	min-width: 340px;
@@ -82,6 +76,10 @@ a:focus .material-icons {
   cursor: pointer;
   text-decoration: none;
   background: transparent;
+}
+
+.btn-lg {
+	padding: 12px 32px;
 }
 
 .btn:not(.btn-raised) {
@@ -249,8 +247,12 @@ header ul li img.logo{
 }
 
 .form-group {
-	margin: 8px !important;
-	padding: 8px !important;
+	margin: 0px 4px !important;
+	padding: 0px 4px !important;
+}
+
+.form-group input[type=submit] {
+	margin-top: 32px !important;
 }
 
 a.logo-form {
