--- a/custom/css/style.css
+++ b/custom/css/style.css
@@ -30,6 +30,14 @@ input:not([type=submit]){
 	padding: 0;
 }
 
+label {
+	font-size: 12px;
+}
+
+input:not([type=submit]):focus {
+	border-bottom: 2px solid #827717;
+}
+
 body {
 	min-width: 340px;
 	background-color: #fcfcfc;
@@ -57,6 +65,10 @@ a .material-icons,
 a:hover .material-icons,
 a:focus .material-icons {
   vertical-align: middle;
+}
+
+.text-primary {
+	color: #827717;
 }
 
 .btn {
@@ -160,9 +172,16 @@ a:focus .material-icons {
 	height: 56px;
 	top: 0px;
 	position: fixed;
-	background-color: #ff7043;
 	border-top: 4px solid #263238;
 	z-index: 999;
+}
+
+.message-container.greeting {
+	background-color: #388e3c;
+}
+
+.message-container.warning {
+	background-color: #ff7043;
 }
 
 .message-container p {
@@ -252,7 +271,12 @@ header ul li img.logo{
 }
 
 .form-group input[type=submit] {
-	margin-top: 32px !important;
+	margin-top: 24px !important;
+}
+
+fieldset legend {
+	border-bottom: none;
+	text-align: center;
 }
 
 a.logo-form {
