--- a/custom/css/style.css
+++ b/custom/css/style.css
@@ -12,12 +12,6 @@ a {
 	text-decoration: none !important;
 }
 
-label {
-	color: blue;
-	font-weight: 300;
-	margin-top: -16px;
-}
-
 input:not([type=submit]){
 	border-top: none !important;
 	border-left: none !important;
@@ -32,6 +26,8 @@ input:not([type=submit]){
 
 label {
 	font-size: 12px;
+	font-weight: 300;
+	margin-top: -16px;
 }
 
 input:not([type=submit]):focus {
@@ -65,10 +61,6 @@ a .material-icons,
 a:hover .material-icons,
 a:focus .material-icons {
   vertical-align: middle;
-}
-
-.text-primary {
-	color: #827717;
 }
 
 .btn {
@@ -233,6 +225,33 @@ header ul li img.logo{
 	display: none;
 }
 
+/* Header Image Background - Change the URL below to your image path (example: ../images/background.jpg) */
+
+.cover {
+    height: 400px;
+    background: url('http://quote.com/custom/img/1920x400.png') center center no-repeat scroll;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    background-size: cover;
+    -o-background-size: cover;
+		margin-bottom: 24px;
+}
+
+.cover h1 {
+	padding-top: 128px;
+}
+
+.cover h3 {
+	margin-top: -8px;
+}
+
+.cover .btn.call-to-action {
+	padding: 16px;
+	display:block;
+	margin: 0 auto;
+	width: 240px;
+}
+
 @media screen and (max-width: 768px) {
 	.links .btn {
 		border-radius: 100%;
@@ -247,14 +266,6 @@ header ul li img.logo{
 		display: block;
 		padding: 6px;
 	}
-}
-
-.cover {
-	width: 100%;
-	height: 280px;
-	background: #ccc;
-	padding: 0px;
-	margin: 0px 0px 24px 0px;
 }
 
 .line {
@@ -293,6 +304,10 @@ a.logo-form img {
 	margin: 16px 12px;
 	opacity: .9;
 	box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
+}
+
+.text-primary {
+	color: #827717;
 }
 
 a.text-primary {
