--- a/custom/css/style.css
+++ b/custom/css/style.css
@@ -114,18 +114,34 @@ a:focus .material-icons {
 }
 
 .btn:focus:active:hover {
-  -webkit-box-shadow: 0 0 8px rgba(0, 0, 0, 0.18), 0 8px 16px rgba(0, 0, 0, 0.36);
-          box-shadow: 0 0 8px rgba(0, 0, 0, 0.18), 0 8px 16px rgba(0, 0, 0, 0.36);
+  -webkit-box-shadow:
+	0 0 8px rgba(0, 0, 0, 0.18),
+	0 8px 16px rgba(0, 0, 0, 0.36);
+          box-shadow:
+					0 0 8px rgba(0, 0, 0, 0.18),
+					0 8px 16px rgba(0, 0, 0, 0.36);
 }
 
 .btn.btn-raised {
-  -webkit-box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
-          box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
+  -webkit-box-shadow:
+	0 2px 2px 0 rgba(0, 0, 0, 0.14),
+	0 3px 1px -2px rgba(0, 0, 0, 0.2),
+	0 1px 5px 0 rgba(0, 0, 0, 0.12);
+          box-shadow:
+					0 2px 2px 0 rgba(0, 0, 0, 0.14),
+					0 3px 1px -2px rgba(0, 0, 0, 0.2),
+					0 1px 5px 0 rgba(0, 0, 0, 0.12);
 }
 
 .btn-group-raised:active:hover {
-  -webkit-box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.14), 0 1px 10px 0 rgba(0, 0, 0, 0.12), 0 2px 4px -1px rgba(0, 0, 0, 0.2);
-          box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.14), 0 1px 10px 0 rgba(0, 0, 0, 0.12), 0 2px 4px -1px rgba(0, 0, 0, 0.2);
+  -webkit-box-shadow:
+	0 4px 5px 0 rgba(0, 0, 0, 0.14),
+	0 1px 10px 0 rgba(0, 0, 0, 0.12),
+	0 2px 4px -1px rgba(0, 0, 0, 0.2);
+          box-shadow:
+					0 4px 5px 0 rgba(0, 0, 0, 0.14),
+					0 1px 10px 0 rgba(0, 0, 0, 0.12),
+					0 2px 4px -1px rgba(0, 0, 0, 0.2);
 }
 
 .btn.btn-fab {
@@ -137,8 +153,12 @@ a:focus .material-icons {
   width: 56px;
   padding: 0;
   overflow: hidden;
-  -webkit-box-shadow: 0 1px 1.5px 0 rgba(0, 0, 0, 0.12), 0 1px 1px 0 rgba(0, 0, 0, 0.24);
-          box-shadow: 0 1px 1.5px 0 rgba(0, 0, 0, 0.12), 0 1px 1px 0 rgba(0, 0, 0, 0.24);
+  -webkit-box-shadow:
+	0 1px 1.5px 0 rgba(0, 0, 0, 0.12),
+	0 1px 1px 0 rgba(0, 0, 0, 0.24);
+          box-shadow:
+					0 1px 1.5px 0 rgba(0, 0, 0, 0.12),
+					0 1px 1px 0 rgba(0, 0, 0, 0.24);
   position: relative;
   line-height: normal;
 }
@@ -210,7 +230,10 @@ header ul li.links img{
 	width: 36px;
 	border-radius: 100%;
 	margin: 10px 4px;
-	box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
+	box-shadow:
+	0 2px 2px 0 rgba(0, 0, 0, 0.14),
+	0 3px 1px -2px rgba(0, 0, 0, 0.2),
+	0 1px 5px 0 rgba(0, 0, 0, 0.12);
 }
 
 header ul li img.logo{
@@ -274,6 +297,25 @@ header ul li img.logo{
 	margin: 0px 0px 52px 0px;
 }
 
+.container-form .panel.panel-default {
+	margin-top: 16px;
+}
+
+a.logo-form {
+	display: block;
+	margin: 16px auto 0 auto;
+	width: 36px;
+	height: 36px;
+	border-radius: 100%;
+	background-color: #263238;
+}
+
+a.logo-form img {
+	width: 20px;
+	margin: 10px 8px;
+	opacity: .9;
+}
+
 .form-group {
 	margin: 0px 4px !important;
 	padding: 0px 4px !important;
@@ -286,22 +328,6 @@ header ul li img.logo{
 fieldset legend {
 	border-bottom: none;
 	text-align: center;
-}
-
-a.logo-form {
-	display: block;
-	margin: 16px auto 0 auto;
-	width: 64px;
-	height: 64px;
-	border-radius: 100%;
-	background-color: #263238;
-}
-
-a.logo-form img {
-	width: 40px;
-	margin: 16px 12px;
-	opacity: .9;
-	box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
 }
 
 .text-primary {
@@ -326,7 +352,9 @@ a.text-primary:hover {
 
 .panel {
   border: 0;
-  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  box-shadow:
+	0 1px 3px rgba(0,0,0,0.12),
+	0 1px 2px rgba(0,0,0,0.24);
 }
 
 .panel:hover {
@@ -352,7 +380,10 @@ a.text-primary:hover {
 	width: 100%;
 	height: 100%;
 	position: relative;
-	box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
+	box-shadow:
+	0 2px 2px 0 rgba(0, 0, 0, 0.14),
+	0 3px 1px -2px rgba(0, 0, 0, 0.2),
+	0 1px 5px 0 rgba(0, 0, 0, 0.12);
 	z-index: 2;
 }
 
@@ -366,7 +397,10 @@ a.text-primary:hover {
 	bottom: calc(100% - 64px - 16px);
 	width: 64px;
 	border-radius: 100%;
-	box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
+	box-shadow:
+	0 2px 2px 0 rgba(0, 0, 0, 0.14),
+	0 3px 1px -2px rgba(0, 0, 0, 0.2),
+	0 1px 5px 0 rgba(0, 0, 0, 0.12);
 }
 
 .panel-heading .img {
@@ -399,7 +433,10 @@ a.text-primary:hover {
 	border-radius: 100%;
 	display: flex;
 	justify-content: space-around;
-	box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
+	box-shadow:
+	0 2px 2px 0 rgba(0, 0, 0, 0.14),
+	0 3px 1px -2px rgba(0, 0, 0, 0.2),
+	0 1px 5px 0 rgba(0, 0, 0, 0.12);
 }
 
 .panel-heading .info-block.active {
@@ -490,7 +527,9 @@ a.text-primary:hover {
 .info-bar li {
 	display: inline-block;
   margin: 0 2px;
-	text-shadow: 0 1px 0 rgba(255, 255, 255, .15), 0 -1px 0 rgba(0, 0, 0, .25);
+	text-shadow:
+	0 1px 0 rgba(255, 255, 255, .15),
+	0 -1px 0 rgba(0, 0, 0, .25);
 }
 
 .info-bar li i.link, .info-bar li small {
