--- a/custom/css/style.css
+++ b/custom/css/style.css
@@ -236,6 +236,7 @@ header ul li.links a{
 header ul li.links img{
 	cursor: pointer;
 	width: 36px;
+  height: 36px;
 	border-radius: 100%;
 	margin: 10px 4px;
 	box-shadow:
@@ -290,8 +291,12 @@ header ul li img.logo{
   display: block;
   margin: 80px auto 16px auto;
   width: 160px;
+  height: 160px;
   clear: both;
-  border: 8px solid rgba(255,255,255,.5);
+  box-shadow:
+	0 2px 2px 0 rgba(0, 0, 0, 0.14),
+	0 3px 1px -2px rgba(0, 0, 0, 0.2),
+	0 1px 5px 0 rgba(0, 0, 0, 0.12);
 }
 
 @media screen and (max-width: 768px) {
