--- a/custom/css/style.css
+++ b/custom/css/style.css
@@ -422,6 +422,7 @@ a.text-primary:hover {
 	left: calc(100% - 64px - 16px);
 	bottom: calc(100% - 64px - 16px);
 	width: 64px;
+  height: 64px;
 	border-radius: 100%;
 	box-shadow:
 	0 2px 2px 0 rgba(0, 0, 0, 0.14),
@@ -578,6 +579,7 @@ a.text-primary:hover {
 		left: calc(100% - 32px - 16px);
 		bottom: calc(100% - 32px - 16px);
 		width: 32px;
+    height: 32px;
 		border-radius: 100%;
   }
 	.panel-heading small {
