--- a/custom/css/style.css
+++ b/custom/css/style.css
@@ -439,38 +439,32 @@ a.text-primary:hover {
 	color: #9e9d24; !important;
 }
 
-/*.nav-tabs {
-  position: absolute;
-  margin: 0 16px;
-  bottom: -1px;
-}*/
-
-.nav,
+.nav-tabs,
 .tab-content {
   margin-bottom: 0;
   padding: 0;
   list-style: none;
 }
 
-.nav li {
+.nav-tabs li {
   float: none;
   position: relative;
   display: block;
 }
-.nav li a {
-  width: auto;
+.nav-tabs li a {
   position: relative;
   display: block;
   padding: 4px;
-  font-size: 24px;
+  font-size: 18px;
 }
-.nav li a:hover,
-.nav li a:focus {
+
+.nav-tabs li a:hover,
+.nav-tabs li a:focus {
   text-decoration: none;
   background-color: transparent;
 }
 
-.nav.nav-tabs {
+.nav-tabs {
   border-bottom: none;
 }
 
@@ -489,9 +483,9 @@ a.text-primary:hover {
   background-color: transparent;
 }
 
-.nav-tabs li.active > a,
-.nav-tabs li.active > a:hover,
-.nav-tabs li.active > a:focus {
+.nav-tabs li.active a,
+.nav-tabs li.active a:hover,
+.nav-tabs li.active a:focus {
   color: #263238;
   background-color: transparent;
   border: none;
@@ -516,14 +510,6 @@ a.text-primary:hover {
 .panel p,
 .panel small {
   color: #fff;
-}
-
-.panel:hover {
-
-}
-
-[class*="panel-"] > .panel-heading {
-  border: 0;
 }
 
 .panel.panel-default {
@@ -556,11 +542,6 @@ a.text-primary:hover {
   height: 48px;
   margin: 8px 12px;
 }
-
-/*.panel.panel-user {
-  margin: 4px 0;
-  padding: 0;
-}*/
 
 .panel.panel-user:hover {
   -webkit-box-shadow:
@@ -607,6 +588,10 @@ a.text-primary:hover {
 	0 3px 1px -2px rgba(0, 0, 0, 0.2),
 	0 1px 5px 0 rgba(0, 0, 0, 0.12);
 	z-index: 2;
+}
+
+.panel-heading {
+  border: 0;
 }
 
 .panel-heading .interactions {
