--- a/custom/css/style.css
+++ b/custom/css/style.css
@@ -5,6 +5,13 @@ input:-webkit-autofill:active {
     transition: background-color 5000s ease-in-out 0s;
 }
 
+* {
+  -webkit-box-sizing:border-box;
+  -moz-box-sizing:border-box;
+  -ms-box-sizing:border-box;
+   box-sizing:border-box;
+}
+
 *:not(body) {
 	transition: all .2s ease-in-out;
   /*border: 1px solid red;*/
@@ -19,26 +26,67 @@ a {
 	text-decoration: none !important;
 }
 
-input:not([type=submit]){
+input:not([type=submit]),
+textarea {
 	border-top: none !important;
 	border-left: none !important;
 	border-right: none !important;
-	border-bottom: 1px solid #cfcfcf;
+	border-bottom: 1px solid #cfcfcf !important;
 	border-radius: 0 !important;
 	box-shadow: inset 0 0 0 transparent !important;
 	background-color: transparent !important;
-	margin: 0 auto;
-	padding: 0;
+	margin: 0 auto !important;
+	padding: 0 !important;
 }
 
 label {
-	font-size: 12px;
-	font-weight: 300;
-	margin-top: -16px;
+	font-size: 12px !important;
+	font-weight: 400 !important;
+	margin-top: 0px !important;
 }
 
-input:not([type=submit]):focus {
-	border-bottom: 2px solid #827717;
+input:not([type=submit]):focus,
+textarea:focus {
+	border-bottom: 1px solid #827717 !important;
+}
+
+textarea {
+  outline: none;
+  resize: none;
+}
+
+textarea:focus {
+  box-shadow: inset 0 0 0 2px -2px #827717 !important;
+}
+
+.card input[type=file] {
+	opacity: 0;
+	overflow: hidden;
+	position: absolute;
+}
+
+.card input[type=file] + label {
+    display: block;
+}
+
+.card input[type=radio] {
+  display: none;
+}
+
+.card input[type="radio"] + label {
+  display: inline-block;
+  width: 19px;
+  height: 19px;
+  margin: -1px 4px 0 0;
+  vertical-align: middle;
+  cursor: pointer;
+  -moz-border-radius: 50%;
+  border-radius: 50%;
+  background-color: #292321;
+}
+
+.card input[type="radio"]:checked + label {
+  background-color: #CC3300;
 }
 
 body {
