--- a/custom/css/style.css
+++ b/custom/css/style.css
@@ -55,18 +55,15 @@ textarea {
   resize: none;
 }
 
-textarea:focus {
-  box-shadow: inset 0 0 0 2px -2px #827717 !important;
-}
-
 .card input[type=file] {
 	opacity: 0;
 	overflow: hidden;
 	position: absolute;
+  width: 0;
 }
 
 .card input[type=file] + label {
-    display: block;
+    display: inline-block;
 }
 
 .card input[type=radio] {
@@ -75,18 +72,17 @@ textarea:focus {
 
 .card input[type="radio"] + label {
   display: inline-block;
-  width: 19px;
-  height: 19px;
-  margin: -1px 4px 0 0;
+  width: 32px;
+  height: 32px;
+  margin: 0 4px 0 0;
   vertical-align: middle;
   cursor: pointer;
-  -moz-border-radius: 50%;
-  border-radius: 50%;
+  border-radius: 100%;
   background-color: #292321;
 }
 
 .card input[type="radio"]:checked + label {
-  background-color: #CC3300;
+  border: 4px solid #827717;
 }
 
 body {
@@ -583,6 +579,7 @@ a.text-primary:hover {
 	border-top-right-radius: 2px;
 	opacity: .4;
 	width: 100%;
+  height: 338px;
 }
 
 .panel.panel-user .avatar {
