--- a/custom/css/style.css
+++ b/custom/css/style.css
@@ -66,6 +66,23 @@ textarea {
     display: inline-block;
 }
 
+span#file-name {
+  font-size: 12px;
+  font-weight: 400;
+  width: 80px;
+  display: inline-block;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+  vertical-align: center;
+  margin-left: 4px;
+}
+
+.form-group.radio-group {
+  display: block !important;
+  margin: 16px auto 24px auto !important;
+}
+
 .card input[type=radio] {
   display: none;
 }
@@ -74,15 +91,34 @@ textarea {
   display: inline-block;
   width: 32px;
   height: 32px;
-  margin: 0 4px 0 0;
+  margin: 0 2px;
   vertical-align: middle;
   cursor: pointer;
   border-radius: 100%;
+}
+
+.card input[type="radio"]#brown + label.brown {
+  background-color: #3e2723;
+}
+
+.card input[type="radio"]#pink + label.pink {
+  background-color: #880e4f;
+}
+
+.card input[type="radio"]#yellow + label.yellow {
+  background-color: #827717;
+}
+
+.card input[type="radio"]#green + label.green {
+  background-color: #1b5e20;
+}
+
+.card input[type="radio"]#blue + label.blue {
   background-color: #292321;
 }
 
 .card input[type="radio"]:checked + label {
-  border: 4px solid #827717;
+  border: 4px solid rgba(255,255,255,.5);;
 }
 
 body {
@@ -579,7 +615,7 @@ a.text-primary:hover {
 	border-top-right-radius: 2px;
 	opacity: .4;
 	width: 100%;
-  height: 338px;
+  height: 100%;
 }
 
 .panel.panel-user .avatar {
