--- a/custom/css/style.css
+++ b/custom/css/style.css
@@ -31,7 +31,7 @@ textarea {
 	border-top: none !important;
 	border-left: none !important;
 	border-right: none !important;
-	border-bottom: 1px solid #cfcfcf !important;
+	border-bottom: 1px solid #cfcfcf;
 	border-radius: 0 !important;
 	box-shadow: inset 0 0 0 transparent !important;
 	background-color: transparent !important;
