--- a/custom/css/style.css
+++ b/custom/css/style.css
@@ -743,7 +743,7 @@ a.text-primary:hover {
 	display: block;
 	margin: 25% auto;
 	opacity: 1;
-	padding: 32px 96px 32px 32px;
+	padding: 16px 80px 0 16px;
 	font-size: 160%;
 	animation-name: entrance;
 	animation-timing-function: ease-out;
