--- a/custom/css/style.css
+++ b/custom/css/style.css
@@ -268,13 +268,17 @@ a:focus .material-icons {
   vertical-align: middle;
 }
 
+.error {
+  
+}
+
 .message-container {
 	width: 100%;
 	height: 56px;
   position: fixed;
-	top: 0px;
+	top: 0;
 	border-top: 4px solid #263238;
-	z-index: 4;
+	z-index: 5;
 }
 
 .message-container.info {
@@ -292,17 +296,29 @@ a:focus .material-icons {
 }
 
 header {
+  position: fixed;
+  top: 0;
+  left: 0;
 	width: 100%;
 	height: 56px;
 	color: rgba(255,255,255, 1);
 	background-color: #263238;
-	padding: 0px;
-	margin: 0px;
+	padding: 0;
+	margin: 0;
+  z-index: 4;
+  -webkit-box-shadow:
+	0 2px 2px 0 rgba(0, 0, 0, 0.14),
+	0 3px 1px -2px rgba(0, 0, 0, 0.2),
+	0 1px 5px 0 rgba(0, 0, 0, 0.12);
+          box-shadow:
+					0 2px 2px 0 rgba(0, 0, 0, 0.14),
+					0 3px 1px -2px rgba(0, 0, 0, 0.2),
+					0 1px 5px 0 rgba(0, 0, 0, 0.12);
 }
 
 header ul {
 	list-style-type: none;
-	padding: 0px;
+	padding: 0;
 }
 
 header ul li.links {
@@ -325,18 +341,26 @@ header ul li.links img{
   height: 36px;
 	border-radius: 100%;
 	margin: 10px 4px;
-	box-shadow:
+  -webkit-box-shadow:
 	0 2px 2px 0 rgba(0, 0, 0, 0.14),
 	0 3px 1px -2px rgba(0, 0, 0, 0.2),
 	0 1px 5px 0 rgba(0, 0, 0, 0.12);
+          box-shadow:
+					0 2px 2px 0 rgba(0, 0, 0, 0.14),
+					0 3px 1px -2px rgba(0, 0, 0, 0.2),
+					0 1px 5px 0 rgba(0, 0, 0, 0.12);
 }
 
 header ul li img.logo{
 	width: 76px;
 	border-radius: 0%;
-	margin: -2px 0px 0px 0px;
-	padding: 0px 4px;
+	margin: -2px 0 0 0;
+	padding: 0 4px;
 	opacity: .9;
+}
+
+.content {
+  margin-top: 56px !important;
 }
 
 .links i {
@@ -400,10 +424,14 @@ header ul li img.logo{
   width: 160px;
   height: 160px;
   border-radius: 100%;
-  box-shadow:
+  -webkit-box-shadow:
 	0 2px 2px 0 rgba(0, 0, 0, 0.14),
 	0 3px 1px -2px rgba(0, 0, 0, 0.2),
 	0 1px 5px 0 rgba(0, 0, 0, 0.12);
+          box-shadow:
+					0 2px 2px 0 rgba(0, 0, 0, 0.14),
+					0 3px 1px -2px rgba(0, 0, 0, 0.2),
+					0 1px 5px 0 rgba(0, 0, 0, 0.12);
   cursor: default;
 }
 
@@ -454,7 +482,7 @@ header ul li img.logo{
 		border-radius: 100%;
 		width: 36px;
 		height: 36px;
-		padding: 0px;
+		padding: 0;
 	}
 	.links span {
 		display: none;
@@ -469,8 +497,8 @@ header ul li img.logo{
 	width: 100%;
 	height: 4px;
 	background-color: #263238;
-	padding: 0px;
-	margin: 0px 0px 52px 0px;
+	padding: 0;
+	margin: 0 0 52px 0;
 }
 
 .container-form .panel.panel-default {
@@ -519,6 +547,10 @@ a.text-primary:hover {
 	color: #9e9d24; !important;
 }
 
+.nav-tabs {
+  position: fixed;
+}
+
 .nav-tabs,
 .tab-content {
   margin-bottom: 0;
@@ -530,11 +562,13 @@ a.text-primary:hover {
   float: none;
   position: relative;
   display: block;
+  background-color: #fcc;
 }
 .nav-tabs li a {
   position: relative;
   display: block;
   padding: 4px;
+  margin: 0;
   font-size: 18px;
 }
 
@@ -594,7 +628,7 @@ a.text-primary:hover {
 
 .panel.panel-default {
 	border-radius: 2px;
-	margin-top: 12px;
+	margin: 32px 0 0 0 ;
 	overlay: hidden;
 }
 
@@ -604,10 +638,14 @@ a.text-primary:hover {
 	width: 48px;
   height: 48px;
 	border-radius: 100%;
-	box-shadow:
+  -webkit-box-shadow:
 	0 2px 2px 0 rgba(0, 0, 0, 0.14),
 	0 3px 1px -2px rgba(0, 0, 0, 0.2),
 	0 1px 5px 0 rgba(0, 0, 0, 0.12);
+          box-shadow:
+					0 2px 2px 0 rgba(0, 0, 0, 0.14),
+					0 3px 1px -2px rgba(0, 0, 0, 0.2),
+					0 1px 5px 0 rgba(0, 0, 0, 0.12);
 }
 
 .panel .img {
@@ -664,10 +702,14 @@ a.text-primary:hover {
 	width: 100%;
 	height: 100%;
 	position: relative;
-	box-shadow:
+  -webkit-box-shadow:
 	0 2px 2px 0 rgba(0, 0, 0, 0.14),
 	0 3px 1px -2px rgba(0, 0, 0, 0.2),
 	0 1px 5px 0 rgba(0, 0, 0, 0.12);
+          box-shadow:
+					0 2px 2px 0 rgba(0, 0, 0, 0.14),
+					0 3px 1px -2px rgba(0, 0, 0, 0.2),
+					0 1px 5px 0 rgba(0, 0, 0, 0.12);
 	z-index: 2;
 }
 
@@ -682,8 +724,8 @@ a.text-primary:hover {
 
 .panel-heading small {
 	position: absolute;
-	bottom: 0px;
-	left: 0px;
+	bottom: 0;
+	left: 0;
 	padding: 16px 16px 16px 32px;
 	font-size: 16px;
 	font-weight: 400;
@@ -703,10 +745,14 @@ a.text-primary:hover {
 	border-radius: 100%;
 	display: flex;
 	justify-content: space-around;
-	box-shadow:
+  -webkit-box-shadow:
 	0 2px 2px 0 rgba(0, 0, 0, 0.14),
 	0 3px 1px -2px rgba(0, 0, 0, 0.2),
 	0 1px 5px 0 rgba(0, 0, 0, 0.12);
+          box-shadow:
+					0 2px 2px 0 rgba(0, 0, 0, 0.14),
+					0 3px 1px -2px rgba(0, 0, 0, 0.2),
+					0 1px 5px 0 rgba(0, 0, 0, 0.12);
 }
 
 .panel-heading .info-block.active {
@@ -715,7 +761,7 @@ a.text-primary:hover {
 	left: calc(0%);
 	width: 100%;
 	height: 200%;
-	border-radius: 0px;
+	border-radius: 0;
 	background-color: #263238;
 }
 
@@ -796,7 +842,9 @@ a.text-primary:hover {
 
 .info-bar li {
 	display: block;
-	text-shadow: 0 1px 0 rgba(255, 255, 255, .15), 0 -1px 0 rgba(0, 0, 0, .25);
+	text-shadow:
+  0 1px 0 rgba(255, 255, 255, .15),
+  0 -1px 0 rgba(0, 0, 0, .25);
 }
 
 .info-bar li i.link {
